# kiosque

./: .editorconfig  .gitignore  Cargo.toml  README.md  conf.md
assets/: server.crt  server.csr  server.key  server.key.org
broken/: sample148.capnp
logformat/: Cargo.toml  build.rs
logformat/src/: lib.rs  schema.capnp
src/: config.rs  lib.rs  logmanager.rs
src/configuration_items/: mod.rs  processor.rs  splunk_server.rs
tests/: capnp.rs  capnproto_issue.rs  config.rs  lib.rs  simple.conf
