[package]
name = "log_archive"
version = "0.1.0"
authors = ["Pierre Baillet <pierre@baillet.name>"]

[lib]
name = "log_archive"
path = "src/lib.rs"

[[bin]]
name = "splunk_server"
path = "src/bin/splunk_server.rs"

[[bin]]
name = "kiosque"
path = "src/bin/kiosque.rs"


[dependencies]

capnp = "0.7.1"
rand = "0.3.14"
chrono = "0.2"
hprof = "0.1.3"
regex = "0.1.69"
openssl = "0.7.10"

hyper = "0.8.1"
rustc-serialize = "0.3.19"

nom = "^1.2.3"
itertools = "0.4.15"

docopt = "0.6.80"

memmap = "0.3.0"

[dependencies.nickel]
version = "0.8.0"
features = ["ssl"]

[dependencies.logformat]
path = "./logformat"
